--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         </activity>
         <activity android:name=".audio.AudioActivity" />
         <activity android:name=".camera.CameraActivity" />
-        <activity android:name=".player.PlayerActivity"></activity>
+        <activity android:name=".player.PlayerActivity" />
+        <activity android:name=".test.TestActivity"></activity>
     </application>
 
 </manifest>
