--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.google.android.exoplayer:exoplayer:2.8.3'
     implementation 'com.google.android.exoplayer:exoplayer-core:2.8.3'
+    // 动态权限申请
+    implementation 'pub.devrel:easypermissions:1.3.0'
 }
