--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
         <activity android:name=".audio.AudioActivity" />
         <activity android:name=".camera.CameraActivity" />
         <activity android:name=".player.PlayerActivity" />
-        <activity android:name=".test.TestActivity"></activity>
+        <activity android:name=".test.TestActivity" />
     </application>
 
 </manifest>
