--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
         <activity android:name=".camera.CameraActivity" />
         <activity android:name=".player.PlayerActivity" />
         <activity android:name=".test.TestActivity" />
+        <activity android:name=".FullScreenActivity" />
     </application>
 
 </manifest>
