--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,8 @@ dependencies {
     implementation 'com.google.android.exoplayer:exoplayer-core:2.8.3'
     // 动态权限申请
     implementation 'pub.devrel:easypermissions:1.3.0'
+
+    // add glide
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
 }
